crates/ruff/src/message/snapshots/ruff__message__grouped__tests__show_source.snap
---
source: crates/ruff/src/message/grouped.rs
expression: content
---
fib.py:
  1:8 F401 `os` imported but unused
    |
  1 | import os
    |        ^^ F401
    |
    = help: Remove unused import: `os`
  
  6:5 F841 Local variable `x` is assigned to but never used
     |
   6 | def fibonacci(n):
   7 |     """Compute the nth number in the Fibonacci sequence."""
   8 |     x = 1
     |     ^ F841
   9 |     if n == 0:
  10 |         return 0
     |
     = help: Remove assignment to unused variable `x`
  
undef.py:
  1:4 F821 Undefined name `a`
    |
  1 | if a == 1: pass
    |    ^ F821
    |
  

